# nrf-zephyr-introduction

./: CMakeLists.txt  Kconfig  README.rst  nrf52dk_nrf52832.overlay  prj.conf
src/: drv_button.c  drv_button.h  drv_led.c  drv_led.h  drv_uart.c  drv_uart.h  main.c  thread_common.h
